Changes in Version 0.2-0

  o Reimplementation of model-based recursive partitioning (MOB)
    using "partykit" infrastructure. The workhorse function is mob()
    and convenience interfaces lmtree() and glmtree() are provided
    for MOBs based on least-squares regression and generalized linear
    models, respectively.

  o deal with empty levels for teststat = "quad"
    (bug reported by Wei-Yin Loh <loh@stat.wisc.edu>)

Changes in Version 0.1-6

  o Bug fix in as.party() method for J48 trees with ordered factors.


Changes in Version 0.1-5

  o Fix C code problems reported by clang under OS X.


Changes in Version 0.1-4

  o Added "node_surv" for plotting survival ctrees. Accompanying
    infrastructure for survival trees was enhanced.
    
  o ctree() now checks for (and does not allow) x >= max(x) splits.


Changes in Version 0.1-3

  o Added "ipred" to the list of suggested packages due to usage of
    GlaucomaM and GBSG2 data in tests/examples.


Changes in Version 0.1-2

  o The node_terminal() panel-generating function is now customizable
    by a FUN argument that is passed to formatinfo().

  o The plot() method for "simpleparty" object now sets up a formatting
    function passed to formatinfo(), both in print() and plot().

  o Fixed bug in pmmlTreeModel() for processing label IDS in splits when
    not all levels are present.
  
  o Cleaned up unused variables in C code and partial argument matching
    in R code.
  

Changes in Version 0.1-1

  o First CRAN release.
  
  o See vignette("partykit", package = "partykit") for a (somewhat rough)
    introduction to the package and its classes/methods.